fixed overlap tile issue

--- a/src/Tile.css
+++ b/src/Tile.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     padding: 7.3vw;
-    max-height: 100%;
-    overflow: auto;
+    max-height: calc(100vh - 50%);
+    overflow-y: auto;
     position: relative;
 }
 
